2000-10-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.c (headqueue_disk): new function to
	insert at the head of the queue.
	* server-src/diskfile.h (headqueue_disk): prototype.
	* server-src/driver.c (taper_queuedisk): insert with
	headqueue_disk() if disk already attempted.

2000-10-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* AUTHORS: fix my email address.

2000-09-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: Don't accept -m or -M option if MAILER
	is not defined.
	* server-src/reporter.c: Need a -f optionn if MAILER is not defined.

2000-09-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	patch by <jeg@time.ucsc.edu>

	* server-src/reporter.c (output_summary): check for tape_labels.

2000-09-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amindexd.c: use strcasecmp to compare hostname.

2000-09-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: fix plural misuse.

2000-09-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amanda.8.in: add all pages in the SEE ALSO section.

2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amreport.8.in: amreport does not rotate the log.
	* man/amrestore.8: note on holdingdisk.
	* restore-src/amrestore.c: update usage.
	* server-src/amrmtape.sh.in: update usage.
	* server-src/amverify.sh.in.usage: update usage.

2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amoverview.pl.in: update usage information,
	-config is no longer needed for ccompatibility with other program.
	* man/amoverview.8.in: -config is no longer needed.

2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: chunk should not be larger than
	MAX_FILE_SIZE - 1Mb.

2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendsize.c (getsize_smbtar): remove unused debug_level
	variable.