@@ -23,7 +23,7 @@
  * Authors: the Amanda Development Team.  Its members are listed in a
  * file named AUTHORS, in the root directory of this distribution.
  */
-/* $Id: taper.c,v 1.63 2000/07/19 00:20:24 jrjackson Exp $
+/* $Id: taper.c,v 1.64 2000/10/11 00:34:03 martinea Exp $
  *
  * moves files from holding disk to tape, or from a socket to tape
  */
@@ -561,6 +561,7 @@ void read_file(fd, handle, hostname, diskname, datestamp, level, port_flag)
     int rc, err, opening, closing, bufnum;
     long filesize;
     times_t runtime;
+    char *strclosing = NULL;
     char *str;
     int header_read = 0;
     dumpfile_t file;
@@ -668,6 +669,7 @@ void read_file(fd, handle, hostname, diskname, datestamp, level, port_flag)
 				       sizeof(bp->buffer))) < 0) {
 		err = (rc < 0)? errno : 0;
 		closing = 1;
+		strclosing = newvstralloc(strclosing,"Can't read data: ",NULL);
 		syncpipe_put('C');
 	    }
 	    else {
@@ -684,14 +686,15 @@ void read_file(fd, handle, hostname, diskname, datestamp, level, port_flag)
 		    else if((fd = open(file.cont_filename,O_RDONLY)) == -1) {
 			err = errno;
 			closing = 1;
+			strclosing = newvstralloc(strclosing,"can't open: ",file.cont_filename,NULL);
 			syncpipe_put('C');
 			rc = 0;
 		    }
 		    else if((fd != save_fd) && dup2(fd, save_fd) == -1) {
 			err = errno;
 			closing = 1;
+			strclosing = newvstralloc(strclosing,"can't dup2: ",file.cont_filename,NULL);
 			syncpipe_put('C');
-			fprintf(stderr,"can't dup2\n");
 		    }
 		    else {
 			if(fd != save_fd) {
@@ -702,6 +705,7 @@ void read_file(fd, handle, hostname, diskname, datestamp, level, port_flag)
 						   sizeof(bp->buffer))) <= 0) {
 			    err = (rc < 0)? errno : 0;
 			    closing = 1;
+			    strclosing = newvstralloc(strclosing,"Can't read header: ",file.cont_filename,NULL);
 			    syncpipe_put('C');
 			}
 			else {
@@ -711,6 +715,8 @@ void read_file(fd, handle, hostname, diskname, datestamp, level, port_flag)
 						   sizeof(bp->buffer))) <= 0) {
 				err = (rc < 0)? errno : 0;
 				closing = 1;
+				if(rc<0)
+			    	    strclosing = newvstralloc(strclosing,"Can't read data: ",NULL);
 				syncpipe_put('C');
 			    }
 			}
@@ -784,9 +790,14 @@ void read_file(fd, handle, hostname, diskname, datestamp, level, port_flag)
 	    aclose(fd);
 	    runtime = stopclock();
 	    if(err) {
-		errstr = newvstralloc(errstr,
-				      "[input: ", strerror(err), "]",
-				      NULL);
+		if(strclosing)
+		    errstr = newvstralloc(errstr,
+				          "[input: ", strclosing, ": ",
+					  strerror(err), "]", NULL);
+		else
+		    errstr = newvstralloc(errstr,
+				          "[input: ", strerror(err), "]",
+				          NULL);
 		q = squote(errstr);
 		putresult("TAPE-ERROR %s %s\n", handle, q);
 		amfree(q);
